--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 	<table>
-		<caption>Student Details.</caption>
+		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
